--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                 <a href="#testimonial" class="nav-item nav-link">Review</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="https://www.linkedin.com/in/xolisani-nyawo-944050216" class="btn btn-outline-primary d-none d-lg-block" target="_blank">Hire Me</a>
-            <a href="login.html" class="btn btn-outline-primary d-none d-lg-block">Admin Login</a>       
+            <a href="https://www.linkedin.com/in/xolisani-nyawo-944050216" class="btn btn-outline-primary d-none d-lg-block" target="_blank">Hire Me</a>    
 </div>
     </nav>
     <!-- Navbar End -->
@@ -82,7 +81,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-silver"></h1>
                     <div class="typed-text d-none">Industrial Engineer, Web Designer, Web Developer, Applications Designer, Application Developer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                         <a href="" class="btn btn-outline-light mr-5">View My Web</a> <a href="Doc/MR XM Nyawo  CV.pdf" class="btn btn-outline-light mr-5">Download CV</a>
+                         <a href="" class="btn btn-outline-light mr-5" target="_blank">View My Web</a> <a href="Doc/XM Nyawo  CV.pdf" target="_blank" class="btn btn-outline-light mr-5">Download CV</a>
                         <button type="button" class="btn-play" data-toggle="modal"
                                 data-src="https://www.youtube.com/embed/wexzvClUcUk?si=ckDqyTbiW7FC75pEo" data-target="#videoModal">
                             <span></span>
