--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -79,9 +79,9 @@
                     <h3 class="text-white font-weight-normal mb-3">I'm</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #008b8b;">XOLISANI NYAWO</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-silver"></h1>
-                    <div class="typed-text d-none">Industrial Engineer, Web Designer, Web Developer, Applications Designer, Application Developer</div>
+                    <div class="typed-text d-none">Industrial Engineer, Software Engineer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                         <a href="" class="btn btn-outline-light mr-5" target="_blank">View My Web</a> <a href="Doc/XM Nyawo  CV.pdf" target="_blank" class="btn btn-outline-light mr-5">Download CV</a>
+                         <a href="" class="btn btn-outline-light mr-5" target="_blank">View My Web</a> <a href="Doc/XM Nyawo CV.pdf" target="_blank" class="btn btn-outline-light mr-5">Download CV</a>
                         <button type="button" class="btn-play" data-toggle="modal"
                                 data-src="https://www.youtube.com/embed/wexzvClUcUk?si=ckDqyTbiW7FC75pEo" data-target="#videoModal">
                             <span></span>
