--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
                     <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.jpg" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
-                    <h3 class="text-white font-weight-normal mb-3">I'm</h3>
+                    <h3 class="text-white font-weight-normal mb-3"><center>I'm<center></center></h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #008b8b;">XOLISANI NYAWO</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-silver"></h1>
                     <div class="typed-text d-none">Industrial Engineer, Software Engineer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                         <a href="" class="btn btn-outline-light mr-5" target="_blank">View My Web</a> <a href="Doc/MR XM Nyawo CV.pdf" target="_blank" class="btn btn-outline-light mr-5">Download CV</a>
+                         <a href="" class="btn btn-outline-light mr-5">View My Web</a> <a href="Doc/XM Nyawo CV.pdf"  class="btn btn-outline-light mr-5">Download CV</a>
                         <button type="button" class="btn-play" data-toggle="modal"
                                 data-src="https://www.youtube.com/embed/wexzvClUcUk?si=ckDqyTbiW7FC75pEo" data-target="#videoModal">
                             <span></span>
@@ -290,6 +290,24 @@
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">HTML,CSS,JAVASCRIPT</h6>
                             <h6 class="font-weight-bold">45%</h6>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="skill mb-4">
+                        <div class="d-flex justify-content-between">
+                            <h6 class="font-weight-bold">JAVA</h6>
+                            <h6 class="font-weight-bold">49%</h6>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                      <div class="skill mb-4">
+                        <div class="d-flex justify-content-between">
+                            <h6 class="font-weight-bold">Python</h6>
+                            <h6 class="font-weight-bold">41%</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
