--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
                 <div class="col-lg-7">
                     <h3 class="mb-4">GRADUATE INDUSTRIAL ENGINEER</h3>
-                    <p>My name is Xolisani Nyawo a Graduate from Jozini a rural town in the north of Kwazulu-natal (KZN) holding a Degree of bachelor of Engineering Technology in Industrial Engineeringthe Durban University of Technology(DUT). </p>
+                    <p>My name is Xolisani Nyawo a Graduate from Jozini a rural town in the north of Kwazulu-natal (KZN) holding a Degree of bachelor of Engineering Technology in Industrial Engineering from the Durban University of Technology(DUT). </p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Name: <span class="text-secondary">Xolisani Nyawo</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Birthday: <span class="text-secondary">28 September 2001</span></h6></div>
