--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="#testimonial" class="nav-item nav-link">Review</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="https://www.linkedin.com/in/xolisani-nyawo-944050216" class="btn btn-outline-primary d-none d-lg-block" target="_blank">Hire Me</a>    
+            <a href="https://www.linkedin.com/in/xolisani-nyawo-944050216" class="btn btn-outline-primary d-none d-lg-block" target="_blank">LinkedIn</a>    
 </div>
     </nav>
     <!-- Navbar End -->
