--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <a href="#testimonial" class="nav-item nav-link">Review</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/xolisani-nyawo-944050216" target="_blank"><i class="fab fa-linkedin-in"></i></a>  
+            <a class="btn btn-blue btn-social mr-2" href="https://www.linkedin.com/in/xolisani-nyawo-944050216" target="_blank"><i class="fab fa-linkedin-in"></i></a>  
 </div>
     </nav>
     <!-- Navbar End -->
