--- a/index.html
+++ b/index.html
@@ -248,13 +248,22 @@
                             <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
-                        <div class="skill mb-4">
+                    <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">CAD DRAWING</h6>
                             <h6 class="font-weight-bold">68%</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                      <div class="skill mb-4">
+                        <div class="d-flex justify-content-between">
+                            <h6 class="font-weight-bold">JAVA, Python</h6>
+                            <h6 class="font-weight-bold">49%</h6>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                     </div>
                 </div>
@@ -290,15 +299,6 @@
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">HTML,CSS,JAVASCRIPT</h6>
                             <h6 class="font-weight-bold">45%</h6>
-                        </div>
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
-                        </div>
-                    </div>
-                    <div class="skill mb-4">
-                        <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">JAVA, Python</h6>
-                            <h6 class="font-weight-bold">49%</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
@@ -433,7 +433,7 @@
                         <h4 class="font-weight-bold m-0">Problem solving</h4>
                     </div>
                     <p>Problem solving is a great ability for solving and adapting to variuos challenges</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="">Read More</a>
+                    <a class="border-bottom border-primary text-decoration-none" href="https://asq.org/quality-resources/problem-solving">Read More</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
