--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                     </div>
                       <div class="skill mb-4">
                         <div class="d-flex justify-content-between">
-                            <h6 class="font-weight-bold">JAVA, Python</h6>
+                            <h6 class="font-weight-bold">JAVA,</h6>
                             <h6 class="font-weight-bold">49%</h6>
                         </div>
                         <div class="progress">
@@ -299,6 +299,15 @@
                         <div class="d-flex justify-content-between">
                             <h6 class="font-weight-bold">HTML,CSS,JAVASCRIPT</h6>
                             <h6 class="font-weight-bold">45%</h6>
+                        </div>
+                        <div class="progress">
+                            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+                    </div>
+                    <div class="skill mb-4">
+                        <div class="d-flex justify-content-between">
+                            <h6 class="font-weight-bold">JAVA, Python</h6>
+                            <h6 class="font-weight-bold">49%</h6>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
