--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                 <a class="text-white" href="https://support.google.com/sites/?hl=en#topic=7184580" target="_blank">Help</a>
             </div>
             <p class="m-0">
-                &copy; <a class="text-white font-weight-bold" href="#">Xolisani Nyawo</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://www.linkedin.com/in/xolisani-nyawo-944050216" target="_blank">Xolisani Nyawo</a>
+                &copy;2024 <a class="text-white font-weight-bold" href="#">Xolisani Nyawo</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://www.linkedin.com/in/xolisani-nyawo-944050216" target="_blank">Xolisani Nyawo</a>
             </p>
         </div>
     </div>
