--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-silver"></h1>
                     <div class="typed-text d-none">Industrial Engineer, Software Engineer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                         <a href="" class="btn btn-outline-light mr-5">View My Web</a> <a src="https://github.com/Xolisani01/Portfolio-Xolisani/blob/main/Doc/MR%20XM%20Nyawo%20%20CV.pdf" target="_blank"  class="btn btn-outline-light mr-5">Download CV</a>
+                         <a href="" class="btn btn-outline-light mr-5">View My Web</a> 
+                         <a src="https://github.com/Xolisani01/Portfolio-Xolisani/blob/main/Doc/MR%20XM%20Nyawo%20%20CV.pdf" target="_blank"  class="btn btn-outline-light mr-5">Download CV</a>
                         <button type="button" class="btn-play" data-toggle="modal"
                                 data-src="https://www.youtube.com/embed/wexzvClUcUk?si=ckDqyTbiW7FC75pEo" data-target="#videoModal">
                             <span></span>
