--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Karabo Mtsweni</title>
+    <title>Xolisani Nyawo</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="HTML" name="keywords">
     <meta content="HTML" name="description">
@@ -29,7 +29,7 @@
     <!-- Navbar Start -->
     <nav class="navbar fixed-top shadow-sm navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-lg-5">
         <a href="index.html" class="navbar-brand ml-lg-3">
-            <h1 class="m-0 display-5"><span class="text-primary">Karabo</span> Mtsweni</h1>
+            <h1 class="m-0 display-5"><span class="text-primary">Xolisani</span> Nyawo</h1>
         </a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
                 <a href="#testimonial" class="nav-item nav-link">Review</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="https://www.linkedin.com/in/xolisani-nyawo-944050216" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
+            <a href="https://www.linkedin.com/in/xolisani-nyawo-944050216" target="_blank" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -76,12 +76,12 @@
                     <img class="img-fluid w-100 rounded-circle shadow-sm" src="img/profile.jpg" alt="">
                 </div>
                 <div class="col-lg-7 text-center text-lg-left">
-                    <h3 class="text-white font-weight-normal mb-3">I'm</h3>
+                    <h3 class="text-white font-weight-normal mb-3"><center>I'm</center></h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #008b8b;">XOLISANI NYAWO</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-silver"></h1>
                     <div class="typed-text d-none">Process Engineer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                         <a href="Doc/MR XM Nyawo  CV.pdf" class="btn btn-outline-light mr-5">Download CV</a>
+                         <a href="Doc/MR XM Nyawo  CV.pdf"  target="_blank" class="btn btn-outline-light mr-5">Download CV</a>
                          <button type="button" class="btn-play" data-toggle="modal"
                                 data-src="https://youtu.be/O-t95DIq7BI?si=vHNenE_iYYShffE9" data-target="#videoModal">
                             <span></span>
@@ -119,7 +119,7 @@
                         <div class="col-sm-6 py-2"><h6>Freelance: <span class="text-secondary">Part-time</span></h6></div>
                     </div>
                     <div class="position-relative d-flex align-items-center justify-content-center">
-                    <a href="https://www.linkedin.com/in/xolisani-nyawo-944050216" class="btn btn-outline-primary mr-4">Hire Me</a>
+                    <a href="https://www.linkedin.com/in/xolisani-nyawo-944050216" target="_blank" class="btn btn-outline-primary mr-4">Hire Me</a>
                     </div>
                 </div>
             </div>
@@ -192,7 +192,7 @@
                             <div class="position-relative d-flex align-items-center justify-content-center">
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/A&R group.jpeg" style="width: 150px; height: 100px;">
                             </div>
-                            <a class="border-bottom border-primary text-decoration-none" href="https://www.areng-group.com/#:~:text=The%20industry-leading%20mine%20safety%20and">A&R GROUP</a>
+                            <a class="border-bottom border-primary text-decoration-none" href="https://www.areng-group.com/#:~:text=The%20industry-leading%20mine%20safety%20and" target="_blank">A&R GROUP</a>
                             <h5 class="font-weight-bold mb-1">Industrial Engineer Intern</h5>
                             <p class="mb-2"><strong>A & R Engineering and mining supplies (PTY) LTD</strong> | <small>Feb 2024 - Jul 2024</small></p>
                             <p>Working in a mining industry manufacturing and supplying 6 Mines within and abroard the country with the aim of ensuring safety through innovation.</p>
@@ -202,7 +202,7 @@
                             <div class="position-relative d-flex align-items-center justify-content-center">
                             <img class="img-fluid rounded-circle mx-auto mb-3" src="img/Adient.jpeg" style="width: 100px; height: 50px;">
                             </div>
-                            <a class="border-bottom border-primary text-decoration-none" href="https://www.adient.com/about-us/locations/adient-south-africa/#:~:text=We%E2%80%99re%20driving%20a%20high-performance%20culture">ADIENT | PPC</a>
+                            <a class="border-bottom border-primary text-decoration-none" href="https://www.adient.com/about-us/locations/adient-south-africa/#:~:text=We%E2%80%99re%20driving%20a%20high-performance%20culture" target="_blank">ADIENT | PPC</a>
                             <h5 class="font-weight-bold mb-1">Industrial Engineer Graduate</h5>
                             <p class="mb-2"><strong>Adient | PPC </strong> | <small>Aug 2024 - Present</small></p>
                             <p>Joining Adient|PPC as a recent graduate Through the YES program immersed me in an environment for growth and development working with Engineers who provide support and room for potential expertise</p>
@@ -417,7 +417,7 @@
                         <h4 class="font-weight-bold m-0">Web Design & Development</h4>
                     </div>
                     <p>Visual studio is a coding and programming friendly environment for web and systems application</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="https://code.visualstudio.com/">Read More</a>
+                    <a class="border-bottom border-primary text-decoration-none" href="https://code.visualstudio.com/" target="_blank">Read More</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -433,7 +433,7 @@
                         <h4 class="font-weight-bold m-0">Systems Design</h4>
                     </div>
                     <p>Simulation softwares are used to design and automate processes in an industry</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="https://resources.sw.siemens.com/en-US/download-tecnomatix-plant-simulation-student-software">Read More</a>
+                    <a class="border-bottom border-primary text-decoration-none" href="https://resources.sw.siemens.com/en-US/download-tecnomatix-plant-simulation-student-software" target="_blank">Read More</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -441,7 +441,7 @@
                         <h4 class="font-weight-bold m-0">Layout Design</h4>
                     </div>
                     <p>Computer-Aided-Desing (CAD) software to design and sketch faciliyt layouts</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="https://www.autodesk.com/za/products/autocad/overview?term=1-YEAR&tab=subscription">Read More</a>
+                    <a class="border-bottom border-primary text-decoration-none" href="https://www.autodesk.com/za/products/autocad/overview?term=1-YEAR&tab=subscription" target="_blank">Read More</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -449,7 +449,7 @@
                         <h4 class="font-weight-bold m-0">Research</h4>
                     </div>
                     <p>Work research is a systematic approach to understanding a nature of a problem and come up with strategic solution</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="https://www.google.co.za/">Read More</a>
+                    <a class="border-bottom border-primary text-decoration-none" href="https://www.google.co.za/" target="_blank">Read More</a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center mb-5">
                     <div class="d-flex align-items-center justify-content-center mb-4">
@@ -457,7 +457,7 @@
                         <h4 class="font-weight-bold m-0">Coding</h4>
                     </div>
                     <p>visualstudio</p>
-                    <a class="border-bottom border-primary text-decoration-none" href="https://code.visualstudio.com/">Read More</a>
+                    <a class="border-bottom border-primary text-decoration-none" href="https://code.visualstudio.com/" target="_blank">Read More</a>
                 </div>
             </div>
         </div>
@@ -523,10 +523,10 @@
     <div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-light btn-social mr-2" href="https://wa.me/+27791758347?Hi%20Xolisani?"><i class="fab fa-whatsapp"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/profile.php?id=61558130706106"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/xolisani-nyawo-944050216"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-light btn-social" href="https://www.youtube.com/@xolisanimphumuzi2072"><i class="fab fa-youtube"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://wa.me/+27791758347?Hi%20Xolisani?" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/profile.php?id=61558130706106" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/xolisani-nyawo-944050216" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a class="btn btn-light btn-social" href="https://www.youtube.com/@xolisanimphumuzi2072" target="_blank"><i class="fab fa-youtube"></i></a>
             </div>
             <div class="d-flex justify-content-center mb-3">
                 <a class="text-white" href="https://policies.google.com/privacy?hl=en-US">Privacy</a>
