--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h3 class="text-white font-weight-normal mb-3"><center>I'm</center></h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 2px #008b8b;">XOLISANI NYAWO</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-silver"></h1>
-                    <div class="typed-text d-none">Process Engineer</div>
+                    <div class="typed-text d-none">Industrial Engineer, Process Engineer, Software Engineer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                          <a href="Doc/MR XM Nyawo  CV.pdf"  target="_blank" class="btn btn-outline-light mr-5">Download CV</a>
                          <button type="button" class="btn-play" data-toggle="modal"
