--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-silver"></h1>
                     <div class="typed-text d-none">Industrial Engineer, Process Engineer, Software Engineer</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                         <a href="Doc/XM Nyawo CV.pdf"  target="_blank" class="btn btn-outline-light mr-5">Download CV</a>
+                         <a href="https://github.com/Xolisani01/Portfolio-Xolisani/blob/main/Doc/XM%20Nyawo%20%20CV.pdf"  target="_blank" class="btn btn-outline-light mr-5">Download CV</a>
                          <button type="button" class="btn-play" data-toggle="modal"
                                 data-src="https://youtu.be/O-t95DIq7BI?si=vHNenE_iYYShffE9" data-target="#videoModal">
                             <span></span>
