--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <a href="#qualification" class="nav-item nav-link">Qualifications</a>
                 <a href="#skill" class="nav-item nav-link">Skills</a>
                 <a href="#Projects" class="nav-item nav-link">Projects</a>
-                <a href="#Responsibilities" class="nav-item nav-link">Responsibilities</a>
-                <a href="#Expertise" class="nav-item nav-link">Expertise</a>
+                <a href="#Duties" class="nav-item nav-link">Duties</a>
+                <a href="#Mastery" class="nav-item nav-link">Mastery</a>
                 <a href="#testimonial" class="nav-item nav-link">Review</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
@@ -301,11 +301,11 @@
         </div>
     </div>
     <!-- Skill End -->
-    <!-- Responsibilities start -->
-<div class="container-fluid pt-5" id="Responsibilities">
+    <!-- Duties start -->
+<div class="container-fluid pt-5" id="Duties">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Responsibilities</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Duties</h1>
                 <h1 class="position-absolute text-uppercase text-gray-dark">Tasks</h1>
             </div>
             <div class="row pb-3">
@@ -361,7 +361,7 @@
             </div>
         </div>
     </div>
-    <!-- Responsibilities End -->
+    <!-- Duties End -->
         <!-- Projects Start -->
     <div class="container-fluid pt-5" id="Projects">
         <div class="container">
@@ -403,11 +403,11 @@
         </div>
     </div>
     <!-- Projects End -->
-    <!-- Expertise Start -->
-    <div class="container-fluid pt-5" id="Expertise">
+    <!-- Mastery Start -->
+    <div class="container-fluid pt-5" id="Mastery">
         <div class="container">
             <div class="position-relative d-flex align-items-center justify-content-center">
-                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Expertise</h1>
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Mastery</h1>
                 <h1 class="position-absolute text-uppercase text-primary">Expertise</h1>
             </div>
             <div class="row pb-3">
@@ -462,7 +462,7 @@
             </div>
         </div>
     </div>
-    <!-- Expertise End -->
+    <!-- Mastery End -->
     <!-- Review Start -->
     <div class="container-fluid py-5" id="testimonial">
         <div class="container">
