--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Diploma</h5>
                             <p class="mb-2"><strong>Alison</strong> | <small>2023</small></p>
-                            <p>Diploma in Mnagement Information systems- An Introduction</p>
+                            <p>Diploma in Management Information systems- An Introduction</p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
@@ -507,6 +507,23 @@
         </div>
     </div>
     <!-- Review End -->
+    <!-- Article Start -->
+    <h1>My Industrial Engineering Journey</h1>
+
+    <p>
+        <img src="image1.jpg" alt="Image 1">
+        Industrial engineering has been a fascinating journey for me. It's a field that blends engineering principles with a deep understanding of human factors and organizational systems. My experiences in this dynamic industry have been both challenging and rewarding.
+    </p>
+
+    <p>
+        <img src="image2.jpg" alt="Image 2">
+        From optimizing production processes to improving workplace ergonomics, I've had the opportunity to work on a variety of projects that have a real impact on businesses and individuals. I've learned the importance of data analysis, critical thinking, and effective communication in driving positive change.
+    </p>
+
+    <p>
+        <a href="full-article.html" class="read-more-button">Read More</a>
+    </p>
+<!-- Article End -->
     <!-- Contact Start -->
     <div class="container-fluid py-5" id="contact">
         <div class="container">
@@ -523,7 +540,7 @@
     <div class="container-fluid bg-secondary text-white mt-5 py-5 px-sm-3 px-md-5">
         <div class="container text-center py-5">
             <div class="d-flex justify-content-center mb-4">
-                <a class="btn btn-light btn-social mr-2" href="https://wa.me/+27791758347?Hi%20Xolisani?" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                <a class="btn btn-light btn-social mr-2" href="https://wa.me/+27793780995?Hi%20Xolisani?" target="_blank"><i class="fab fa-whatsapp"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://www.facebook.com/profile.php?id=61558130706106" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 <a class="btn btn-light btn-social mr-2" href="https://www.linkedin.com/in/xolisani-nyawo-944050216" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a class="btn btn-light btn-social" href="https://www.youtube.com/@xolisanimphumuzi2072" target="_blank"><i class="fab fa-youtube"></i></a>
@@ -538,7 +555,7 @@
                 <a class="text-white" href="https://support.google.com/sites/?hl=en#topic=7184580">Help</a>
             </div>
             <p class="m-0">
-                &copy; <a class="text-white font-weight-bold" href="#">Xolisani Nyawo</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://www.linkedin.com/in/xolisani-nyawo-944050216">Xolisani Nyawo</a>
+                &copy; <a class="text-white font-weight-bold" href="https://xolisani01.github.io/Mywebsite/">Xolisani Nyawo</a>. All Rights Reserved. Designed by <a class="text-white font-weight-bold" href="https://www.linkedin.com/in/xolisani-nyawo-944050216">Xolisani Nyawo</a>
             </p>
         </div>
     </div>
