--- a/index.html
+++ b/index.html
@@ -204,9 +204,19 @@
                             </div>
                             <a class="border-bottom border-primary text-decoration-none" href="https://www.adient.com/about-us/locations/adient-south-africa/#:~:text=We%E2%80%99re%20driving%20a%20high-performance%20culture" target="_blank">ADIENT | PPC</a>
                             <h5 class="font-weight-bold mb-1">Industrial Engineer Graduate</h5>
-                            <p class="mb-2"><strong>Adient | PPC </strong> | <small>Aug 2024 - Present</small></p>
+                            <p class="mb-2"><strong>Adient | PPC </strong> | <small>Aug 2024 - Nov 2024</small></p>
                             <p>Joining Adient|PPC as a recent graduate Through the YES program immersed me in an environment for growth and development working with Engineers who provide support and room for potential expertise</p>
                         </div>
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <div class="position-relative d-flex align-items-center justify-content-center">
+                            <img class="img-fluid rounded-circle mx-auto mb-3" href="https://www.google.com/imgres?q=hesto%20harnesses&imgurl=https%3A%2F%2Fmedia.licdn.com%2Fdms%2Fimage%2Fv2%2FD4D0BAQFuZ0yJorTDig%2Fcompany-logo_200_200%2Fcompany-logo_200_200%2F0%2F1731068400564%2Fhesto_harnesses_logo%3Fe%3D2147483647%26v%3Dbeta%26t%3Drf-oBPjGy0794A_1vJF1x-RwTDeO-d1YhjsMucDmcVI&imgrefurl=https%3A%2F%2Fza.linkedin.com%2Fcompany%2Fhesto-harnesses&docid=bVSClEQalW8_tM&tbnid=lIKwx5EpxfxxkM&vet=12ahUKEwjejLav2K2MAxXCdUEAHf_pPK4QM3oECB0QAA..i&w=200&h=200&hcb=2&ved=2ahUKEwjejLav2K2MAxXCdUEAHf_pPK4QM3oECB0QAA" style="width: 100px; height: 50px;">
+                            </div>
+                            <a class="border-bottom border-primary text-decoration-none" href="https://www.hesto.com/" target="_blank">ADIENT | PPC</a>
+                            <h5 class="font-weight-bold mb-1">Industrial Engineer Graduate</h5>
+                            <p class="mb-2"><strong>Hesto Harnesses </strong> | <small>Dec 2024 - Present</small></p>
+                            <p>Joining Hesto Harnesses as a recent graduate </p>
+                     </div>
                     </div>
                 </div>
             </div>
@@ -508,21 +518,23 @@
     </div>
     <!-- Review End -->
     <!-- Article Start -->
-    <h1>My Industrial Engineering Journey</h1>
-
-    <p>
-        <img src="image1.jpg" alt="Image 1">
-        Industrial engineering has been a fascinating journey for me. It's a field that blends engineering principles with a deep understanding of human factors and organizational systems. My experiences in this dynamic industry have been both challenging and rewarding.
-    </p>
-
-    <p>
-        <img src="image2.jpg" alt="Image 2">
-        From optimizing production processes to improving workplace ergonomics, I've had the opportunity to work on a variety of projects that have a real impact on businesses and individuals. I've learned the importance of data analysis, critical thinking, and effective communication in driving positive change.
-    </p>
-
-    <p>
-        <a href="full-article.html" class="read-more-button">Read More</a>
-    </p>
+    <div class="container-fluid py-5" id="article">
+        <div class="container">
+            <div class="position-relative d-flex align-items-center justify-content-center">
+                <h1 class="display-1 text-uppercase text-white" style="-webkit-text-stroke: 1px #dee2e6;">Industrial</h1>
+                <h1 class="position-absolute text-uppercase text-success">Engineering Journey</h1>
+            </div>
+            <div class="row align-items-center">
+                <div class="col-lg-5 pb-4 pb-lg-0">
+    <p> <img src="image1.jpg" alt="Image 1">
+        Industrial engineering has been a fascinating journey for me. It's a field that blends engineering principles with a deep understanding of human factors and organizational systems. My experiences in this dynamic industry have been both challenging and rewarding.</p>
+    <p><img src="image2.jpg" alt="Image 2">
+        From optimizing production processes to improving workplace ergonomics, I've had the opportunity to work on a variety of projects that have a real impact on businesses and individuals. I've learned the importance of data analysis, critical thinking, and effective communication in driving positive change.</p>
+     <p> <a href="full-article.html" class="read-more-button">Read More</a> </p>
+      </div>
+    </div>
+    </div>
+    </div>
 <!-- Article End -->
     <!-- Contact Start -->
     <div class="container-fluid py-5" id="contact">
