--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <a href="#Duties" class="nav-item nav-link">Duties</a>
                 <a href="#Mastery" class="nav-item nav-link">Mastery</a>
                 <a href="#testimonial" class="nav-item nav-link">Review</a>
+                <a href="#article" class="nav-item nav-link">Articles</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
             <a href="https://www.linkedin.com/in/xolisani-nyawo-944050216" target="_blank" class="btn btn-outline-primary d-none d-lg-block">Hire Me</a>
@@ -210,7 +211,7 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <div class="position-relative d-flex align-items-center justify-content-center">
-                            <img class="img-fluid rounded-circle mx-auto mb-3" href="https://www.google.com/imgres?q=hesto%20harnesses&imgurl=https%3A%2F%2Fmedia.licdn.com%2Fdms%2Fimage%2Fv2%2FD4D0BAQFuZ0yJorTDig%2Fcompany-logo_200_200%2Fcompany-logo_200_200%2F0%2F1731068400564%2Fhesto_harnesses_logo%3Fe%3D2147483647%26v%3Dbeta%26t%3Drf-oBPjGy0794A_1vJF1x-RwTDeO-d1YhjsMucDmcVI&imgrefurl=https%3A%2F%2Fza.linkedin.com%2Fcompany%2Fhesto-harnesses&docid=bVSClEQalW8_tM&tbnid=lIKwx5EpxfxxkM&vet=12ahUKEwjejLav2K2MAxXCdUEAHf_pPK4QM3oECB0QAA..i&w=200&h=200&hcb=2&ved=2ahUKEwjejLav2K2MAxXCdUEAHf_pPK4QM3oECB0QAA" style="width: 100px; height: 50px;">
+                            <img class="img-fluid rounded-circle mx-auto mb-3" src="https://www.google.com/imgres?q=hesto%20harnesses&imgurl=https%3A%2F%2Fmedia.licdn.com%2Fdms%2Fimage%2Fv2%2FD4D0BAQFuZ0yJorTDig%2Fcompany-logo_200_200%2Fcompany-logo_200_200%2F0%2F1731068400564%2Fhesto_harnesses_logo%3Fe%3D2147483647%26v%3Dbeta%26t%3Drf-oBPjGy0794A_1vJF1x-RwTDeO-d1YhjsMucDmcVI&imgrefurl=https%3A%2F%2Fza.linkedin.com%2Fcompany%2Fhesto-harnesses&docid=bVSClEQalW8_tM&tbnid=lIKwx5EpxfxxkM&vet=12ahUKEwjejLav2K2MAxXCdUEAHf_pPK4QM3oECB0QAA..i&w=200&h=200&hcb=2&ved=2ahUKEwjejLav2K2MAxXCdUEAHf_pPK4QM3oECB0QAA" style="width: 100px; height: 50px;">
                             </div>
                             <a class="border-bottom border-primary text-decoration-none" href="https://www.hesto.com/" target="_blank">ADIENT | PPC</a>
                             <h5 class="font-weight-bold mb-1">Industrial Engineer Graduate</h5>
@@ -525,10 +526,10 @@
                 <h1 class="position-absolute text-uppercase text-success">Engineering Journey</h1>
             </div>
             <div class="row align-items-center">
-                <div class="col-lg-5 pb-4 pb-lg-0">
-    <p> <img src="image1.jpg" alt="Image 1">
-        Industrial engineering has been a fascinating journey for me. It's a field that blends engineering principles with a deep understanding of human factors and organizational systems. My experiences in this dynamic industry have been both challenging and rewarding.</p>
-    <p><img src="image2.jpg" alt="Image 2">
+                <div class="col-lg-5 pb-4 pb-lg-0"></div>
+                <img src="image1.jpg" alt="Image 1"></div>
+            <p>Industrial engineering has been a fascinating journey for me. It's a field that blends engineering principles with a deep understanding of human factors and organizational systems. My experiences in this dynamic industry have been both challenging and rewarding.</p>
+               <img src="image2.jpg" alt="Image 2">
         From optimizing production processes to improving workplace ergonomics, I've had the opportunity to work on a variety of projects that have a real impact on businesses and individuals. I've learned the importance of data analysis, critical thinking, and effective communication in driving positive change.</p>
      <p> <a href="full-article.html" class="read-more-button">Read More</a> </p>
       </div>
